[gd_scene format=3 uid="uid://im8qdhhiifhv"]

[ext_resource type="Script" uid="uid://daomn5o2eaihu" path="res://word_container.gd" id="1_1uojp"]
[ext_resource type="PackedScene" uid="uid://bxs0nwbpicuxh" path="res://letter_rect.tscn" id="2_ewgtj"]

[node name="WordContainer" type="HBoxContainer" unique_id=1651187597]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.0
offset_top = -32.0
offset_right = 168.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
alignment = 1
script = ExtResource("1_1uojp")

[node name="LetterRect" parent="." unique_id=1208935742 instance=ExtResource("2_ewgtj")]
layout_mode = 2

[node name="LetterRect2" parent="." unique_id=1044751528 instance=ExtResource("2_ewgtj")]
layout_mode = 2

[node name="LetterRect3" parent="." unique_id=866176298 instance=ExtResource("2_ewgtj")]
layout_mode = 2

[node name="LetterRect4" parent="." unique_id=1277638042 instance=ExtResource("2_ewgtj")]
layout_mode = 2

[node name="LetterRect5" parent="." unique_id=889032676 instance=ExtResource("2_ewgtj")]
layout_mode = 2
